updated the nav and also fixed some issues with the dark mode

--- a/anay-portfolio/src/components/darkmode/themetoggle.css
+++ b/anay-portfolio/src/components/darkmode/themetoggle.css
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--pink-color);
     transition: 0.4s;
     border-radius: 34px;
   }
@@ -28,7 +28,7 @@
     width: 20px;
     left: 2px;
     bottom: 2px;
-    background-color: white;
+    background-color: var(--grey-color);
     transition: 0.4s;
     border-radius: 50%;
   }
@@ -39,5 +39,6 @@
   
   input:checked + .theme-switch-slider:before {
     transform: translateX(24px);
+
   }
   
